--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: pink;
     font-style: 'Verdana', 'DejaVu Sans', sans-serif;
 }
+
+#num2 {
+    color: blue;
+    font-size: 36px;
+}
