Change the background color of the paragraph class

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,5 +1,5 @@
 .paragraph {
-    background-color: pink;
+    background-color: lightpink;
     font-style: 'Verdana', 'DejaVu Sans', sans-serif;
 }
 
