--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -8,6 +8,10 @@
     font-size: 36px;
 }
 
+.size24px {
+    font-size: 24px;
+}
+
 #num4 {
     background-color: lightgreen;
     font-size: 24px;
