--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,10 +1,10 @@
 .paragraph {
-    background-color: lightpink;
+    background-color: rgb(241, 168, 179);
     font-style: 'Verdana', 'DejaVu Sans', sans-serif;
 }
 
 #num2 {
-    color: blue;
+    color: rgb(0, 0, 255);
     font-size: 36px;
 }
 
@@ -13,7 +13,7 @@
 }
 
 #num4 {
-    background-color: lightgreen;
+    background-color: rgb(114, 213, 114);
     font-size: 24px;
     font-weight: bold;
 }
