Change the quotes for the font styles

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .paragraph {
     background-color: rgb(241, 168, 179);
-    font-style: 'Verdana', 'DejaVu Sans', sans-serif;
+    font-style: Verdana, "DejaVu Sans", sans-serif;
 }
 
 #num2 {
